--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -1,6 +1,7 @@
 {
   "country": "lt",
-  "appFolders": [],
+  "appFolders": ["SPPerformanceChecker"],
   "testFolders": [],
-  "bcptTestFolders": []
+  "bcptTestFolders": [],
+  "projectName": "SP Performance Checker"
 }
