--- a/SPPerformanceChecker/app.json
+++ b/SPPerformanceChecker/app.json
@@ -10,14 +10,7 @@
   "help": "",
   "url": "http://www.prekybosvaldymas.lt",
   "logo": "images/splogo_iVz_icon.ico",
-  "dependencies": [
-    {
-      "id": "75f1590f-55c5-4501-ae63-bada5534e852",
-      "publisher": "Microsoft",
-      "name": "Performance Toolkit",
-      "version": "24.0.0.0"
-    }
-  ],
+  "dependencies": [],
   "screenshots": [],
   "platform": "19.0.0.0",
   "application": "19.0.0.0",
