--- a/SPPerformanceChecker/app.json
+++ b/SPPerformanceChecker/app.json
@@ -10,10 +10,17 @@
   "help": "",
   "url": "http://www.prekybosvaldymas.lt",
   "logo": "images/splogo_iVz_icon.ico",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "id": "75f1590f-55c5-4501-ae63-bada5534e852",
+      "publisher": "Microsoft",
+      "name": "Performance Toolkit",
+      "version": "24.0.0.0"
+    }
+  ],
   "screenshots": [],
-  "platform": "19.0.0.0",
-  "application": "19.0.0.0",
+  "platform": "24.0.0.0",
+  "application": "24.0.0.0",
   "idRanges": [
     {
       "from": 56010,
@@ -30,6 +37,7 @@
     "includeSourceInSymbolFile": true
   },
   "runtime": "12.0",
+  "target": "Cloud",
   "features": [
     "TranslationFile",
     "GenerateCaptions"
