Update AL-Go-Settings.json - updateDependencies set to TRUE

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -5,6 +5,7 @@
   "enableCodeCop": true,
   "enableUICop": true,
   "generateDependencyArtifact": true,
+  "updateDependencies": true,
   "CurrentSchedule": "0 2 * * *",
   "NextMinorSchedule": "0 2 * * 6",
   "NextMajorSchedule": "0 2 * * 0"
