#127167 Updated setting.json file, added generateDependencyArtifact = true

--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -3,5 +3,6 @@
   "appFolders": ["SPPerformanceChecker"],
   "testFolders": [],
   "bcptTestFolders": [],
-  "projectName": "SP Performance Checker"
+  "projectName": "SP Performance Checker",
+  "generateDependencyArtifact": true
 }
