--- a/SPPerformanceChecker/app.json
+++ b/SPPerformanceChecker/app.json
@@ -16,6 +16,12 @@
       "publisher": "Microsoft",
       "name": "Performance Toolkit",
       "version": "24.0.0.0"
+    },
+    {
+      "id": "4ce93371-6bd6-4027-a78f-021064ad250e",
+      "publisher": "Microsoft",
+      "name": "SAF-T",
+      "version": "24.0.0.0"
     }
   ],
   "screenshots": [],
