--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -1,5 +1,5 @@
 {
-  "country": "lt",
+  "country": "base",
   "appFolders": ["SPPerformanceChecker"],
   "testFolders": [],
   "bcptTestFolders": [],
