--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -4,6 +4,9 @@
   "templateSha": "0af8feb4cf098ebec44278866877fc9aceff0513",
   "enableCodeCop": true,
   "enableUICop": true,
+    "environments": [
+    "SP_DEV"
+  ],
   "CurrentSchedule": "0 2 * * *",
   "NextMinorSchedule": "0 2 * * 6",
   "NextMajorSchedule": "0 2 * * 0"
